Fixed header sizing spacing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -146,11 +146,14 @@ table{
 	width: 100%;
 
 	.logo{
+		top: 0px;
+		left: 0px;
 		color: #ffffff;
 		display: inline-block;
 		font-family: 'Stalemate';
 		font-size: 75px;
 		margin: 0px 10px 0px 10px;
+		position: fixed;
 		text-shadow:
 			1px 1px 3px #0099cc,
 			1px 1px 3px #0099cc,
@@ -180,9 +183,9 @@ table{
 
 #scene{
 	color: #000000;
-	height: calc(100% - 75px);
-	height: -moz-calc(100% - 75px);
-	height: -webkit-calc(100% - 75px);
+	height: calc(100% - 90px);
+	height: -moz-calc(100% - 90px);
+	height: -webkit-calc(100% - 90px);
 	overflow: scroll;
 	padding: 0px 180px 0px 180px;
 	position: relative;
